modules/grammars/tool/src/test/resources/cocos/valid/Common.ddf
PACKAGE valid

COMPONENT DOCKERFILE Common

RUN "Something To Run"