modules/grammars/tool/src/test/resources/cocos/invalid/Common.ddf
PACKAGE invalid

COMPONENT DOCKERFILE Common

RUN "Something To Run"